--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employee-tracking",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "start",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -21,7 +21,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "express": "^4.18.1",
-    "inquirer": "^9.1.1",
+    "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
   }
 }
